[gd_scene load_steps=5 format=3 uid="uid://sdruuj5ppvm"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_b8jwt"]
[ext_resource type="PackedScene" uid="uid://d2jwr8hbnui15" path="res://scenes/view_model_camera.tscn" id="2_6e1up"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ke2fj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dxaki"]
height = 1.5

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_b8jwt")

[node name="normal_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ke2fj")

[node name="crouch_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_dxaki")
disabled = true

[node name="crouch_raycast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="neck" type="Node3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)

[node name="head" type="Node3D" parent="body/neck"]

[node name="eyes" type="Node3D" parent="body/neck/head"]

[node name="player_camera" type="Camera3D" parent="body/neck/head/eyes"]
cull_mask = 1048573
fov = 70.0

[node name="gun_raycast" type="RayCast3D" parent="body/neck/head/eyes/player_camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
target_position = Vector3(0, 0, -0.75)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="view_model_camera" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_6e1up")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
